<resources>
    <string name="app_name">Nos Falta Uno!</string>
    <string name="has_olvidado_tu_contraseña">¿Has olvidado tu contraseña?</string>
    <string name="bienvenido">Bienvenido a Nos Falta Uno!</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="textInBtn">Ingresar</string>
    <string name="forgot_pass_btn">Recordar contraseña</string>
    <string name="opciones">Opciones</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="arriendo">Arriendo</string>
    <string name="recordar">Recordar</string>
    <string name="bienvenido_a_nos_falta_uno">Bienvenido a Nos Falta Uno!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo">Correo Electronico</string>

</resources>