<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <View
        android:id="@+id/gradiente_fondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradiente_fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_btns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_btns"
        android:layout_width="324dp"
        android:layout_height="433dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/gradiente_fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="37dp"
            android:layout_marginTop="128dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/bienvenido"
            android:textColor="@color/white"
            android:textSize="19dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_menu_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/btn_verde"
            android:fontFamily="@font/nunito_regular"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:text="@string/iniciar_sesion"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btn_menu_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/btn_verde"
            android:fontFamily="@font/nunito_regular"
            android:paddingStart="79dp"
            android:paddingEnd="79dp"
            android:text="@string/registrarse"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_menu_login" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="16dp"
            android:text="@string/has_olvidado_tu_contraseña"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_recordar"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginStart="-9dp"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/trasparente"
            android:padding="0dp"
            android:text="@string/recordar"
            android:textColor="@color/green_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.697"
            app:layout_constraintStart_toEndOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>